import clerkClient from '@clerk/clerk-sdk-node';
import { Inject, Injectable } from '@nestjs/common';
import { ClientGrpc } from '@nestjs/microservices';
import {
  DriverServiceClient,
  GRPC_SERVICE,
  UserServiceClient,
} from '@uit-go/shared-client';
import { VehicleTypeEnum, DriverProfileResponse } from '@uit-go/shared-types';
import { firstValueFrom } from 'rxjs';

@Injectable()
export class AuthService {
  private userService: UserServiceClient;
  private driverService: DriverServiceClient;

  constructor(
    @Inject(GRPC_SERVICE.USER.NAME) private client: ClientGrpc,
    @Inject(GRPC_SERVICE.DRIVER.NAME) private driverClient: ClientGrpc
  ) {
    this.userService = this.client.getService<UserServiceClient>(
      GRPC_SERVICE.USER.NAME
    );

    this.driverService = this.driverClient.getService<DriverServiceClient>(
      GRPC_SERVICE.DRIVER.NAME
    );
  }

  async registerUser(user: {
    username: string;
    email: string;
    password: string;
    fullName: string;
    phone: string;
    balance: number;
  }) {
    // Ghost user detection - bypass Clerk and database for load testing
    const isGhost =
      user.email?.startsWith('ghost:') || user.username?.startsWith('ghost:');

    if (isGhost && process.env.ALLOW_GHOST_USERS === 'true') {
      // Generate synthetic ghost user ID
      const ghostId = `ghost:user_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;

      return {
        userId: ghostId,
        username: user.username || ghostId,
        email: user.email || `${ghostId}@ghost.test`,
        fullName: user.fullName || 'Ghost User',
        phone: user.phone || '+1000000000',
        balance: user.balance || 0.0,
      };
    }

    // Real users: existing Clerk + database flow
    const clerk = await clerkClient.users.createUser({
      emailAddress: [user.email],
      username: user.username,
      password: user.password,
    });

    const profile = await firstValueFrom(
      this.userService.createUserProfile({
        fullName: user.fullName,
        phone: user.phone,
        balance: user.balance,
        email: user.email,
        userId: clerk.id,
      })
    );

    return {
      userId: clerk.id,
      username: user.username,
      email: user.email,
      fullName: user.fullName,
      phone: profile.phone,
      balance: profile.balance,
    };
  }

  async registerDriver(user: {
    username: string;
    email: string;
    password: string;
    name: string;
    phone: string;
    vehicleType: VehicleTypeEnum;
    licensePlate: string;
    licenseNumber: string;
  }) {
    // Ghost driver detection - bypass Clerk and database for load testing
    const isGhost =
      user.email?.startsWith('ghost:') || user.username?.startsWith('ghost:');

    if (isGhost && process.env.ALLOW_GHOST_USERS === 'true') {
      // Generate synthetic ghost driver ID
      const ghostId = `ghost:${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;

      return {
        userId: ghostId,
        username: user.username || ghostId,
        email: user.email || `${ghostId}@ghost.test`,
        name: user.name || 'Ghost Driver',
        phone: user.phone || '+1000000000',
        vehicleType: user.vehicleType || VehicleTypeEnum.MOTOBIKE,
        licensePlate: user.licensePlate || 'GHOST-001',
        licenseNumber: user.licenseNumber || 'DL-GHOST',
      };
    }

    // Real drivers: existing Clerk + database flow
    const clerk = await clerkClient.users.createUser({
      emailAddress: [user.email],
      username: user.username,
      password: user.password,
    });

    const profile = (await firstValueFrom(
      this.driverService.CreateDriver({
        name: user.name,
        phone: user.phone,
        email: user.email,
        userId: clerk.id,
        vehicleType: user.vehicleType,
        licensePlate: user.licensePlate,
        licenseNumber: user.licenseNumber,
      })
    )) as DriverProfileResponse;

    return {
      userId: clerk.id,
      username: user.username,
      email: profile.email,
      name: profile.name,
      phone: profile.phone,
      vehicleType: profile.vehicleType,
      licensePlate: profile.licensePlate,
      licenseNumber: profile.licenseNumber,
    };
  }
}
